--- a/src/main/webapp/WEB-INF/templates/marcaDispositivo.html
+++ b/src/main/webapp/WEB-INF/templates/marcaDispositivo.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html ng-app="monitoreoApp">
+<html ng-app="marcaApp"
+xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Administraci&oacute;n de trabajos</title>
+<title>Localiza El Salvador</title>
 <meta charset="UTF-8" />
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"></link>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/style.css"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/table.css"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/style.css}"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/table.css}"></link>
 </head>
-<body layout="column" ng-controller="monitoreoCtrl as vm">
+<body layout="column" ng-controller="marcaCtrl as vm">
 	<md-toolbar layout="row">
 		<div class="md-toolbar-tools">
 			<md-button ng-click="vm.toggleSidenav('left')" hide-gt-sm class="md-icon-button"> 
 				<md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon> 
 			</md-button>
-			<h1>Monitoreo</h1>
+			<h1>Marcas GPS</h1>
 		</div>
 	</md-toolbar>
 	<div layout="row" flex>
@@ -28,7 +30,7 @@
 				  <table id="table" class="table table-hover table-mc-light-blue" at-table at-paginated at-list="list" at-config="config" rules="none">
 				      <thead id="tblTitle">
 				        <tr>
-				          <th colspan="2">Monitoreo</th>
+				          <th>Marcas</th>
 				          <th>
 				          	<form class="form-inline">
 						        <div class="form-group">
@@ -37,20 +39,30 @@
 						    </form>
 				          </th>
 				          <th>
-				          	
+				          	<md-button id="insertBtn" class="md-primary md-raised" ng-click="newFunction($event)">
+						      Nuevo...
+						    </md-button>
 				          </th>
 				        </tr>
 				      </thead>
 				      <thead>
 				      	<tr>
-				      		<th colspan="2">Nombre</th>
-				      		<th colspan="2">Apellido</th>
+				      		<th colspan="2">Marca</th>
+				      		<th></th>
 				      	</tr>
 				      </thead>
 				      <tbody>
-				        <tr ng-repeat="monitoreo in list|filter:search| orderBy:'-nombre'">
-				          <td colspan="2" data-title="Nombre">{{monitoreo.nombre}}</td>
-				          <td colspan="2" data-title="Apellido">{{monitoreo.apellido}}</td>
+				        <tr ng-repeat="marca in list|filter:search| orderBy:'-nombre'">
+				          <td hidden>{{marca.id}}</td>
+				          <td colspan="2" data-title="Marca">{{marca.marca}}</td>
+				          <td class="right-align">
+				          	<a ng-click="deleteFunction($event, marca)" href="">
+				          		<i class="material-icons crudEliminar">delete_forever</i>
+				          	</a>
+				          	<a ng-click="updateFunction($event, marca)" href="">
+				          		<i class="material-icons crudModificar" >border_color</i>
+				          	</a>
+				          </td>
 				        </tr>
 				      </tbody>
 				    </table>
@@ -72,5 +84,5 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
-	src="${pageContext.request.contextPath}/resources/js/angularjs/monitoreo.js"></script>
+	th:src="@{/resources/js/angularjs/marca.js}"></script>
 </html>
