--- a/src/main/webapp/WEB-INF/templates/clientes.html
+++ b/src/main/webapp/WEB-INF/templates/clientes.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html ng-app="clientesApp">
+<html ng-app="clientesApp"
+xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Administraci&oacute;n de trabajos</title>
+<title>Localiza El Salvador</title>
 <meta charset="UTF-8" />
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"></link>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/style.css"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/table.css"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/style.css}"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/table.css}"></link>
 </head>
 <body layout="column" ng-controller="clientesCtrl as vm">
 	<md-toolbar layout="row">
@@ -85,5 +87,5 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
-	src="${pageContext.request.contextPath}/resources/js/angularjs/clientes.js"></script>
+	th:src="@{/resources/js/angularjs/clientes.js}"></script>
 </html>
