--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -1,12 +1,14 @@
-<!DOCTYPE HTML>
-<html ng-app="loginApp">
-	<head>
-		<title>Inicio</title>
-		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"></link>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-		<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/login.css"></link>
-		<meta charset="UTF-8"></meta>
+<!DOCTYPE html>
+<html ng-app="loginApp"
+xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+<head>
+<title>Localiza El Salvador</title>
+<meta charset="UTF-8" />
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"></link>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/login.css}"></link>
 	</head>
 	<body>
 		<div  layout="row" layout-align="center center" ng-cloak="">
@@ -43,5 +45,5 @@
   	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
  	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
  	<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-	<script type="text/javascript" src="${pageContext.request.contextPath}/resources/js/angularjs/login.js"></script>
+	<script type="text/javascript" th:src="@{/resources/js/angularjs/login.js}"></script>
 </html>
