--- a/src/main/webapp/WEB-INF/templates/tecnicos.html
+++ b/src/main/webapp/WEB-INF/templates/tecnicos.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html ng-app="ejecutivasApp">
+<html ng-app="tecnicosApp"
+xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Administraci&oacute;n de trabajos</title>
-<meta charset="UTF-8" />
+	<title>Localiza El Salvador</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"></link>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/style.css"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/table.css"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/style.css}"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/table.css}"></link>
 </head>
-<body layout="column" ng-controller="ejecutivasCtrl as vm">
+<body layout="column" ng-controller="tecnicosCtrl as vm">
 	<md-toolbar layout="row">
 		<div class="md-toolbar-tools">
 			<md-button ng-click="vm.toggleSidenav('left')" hide-gt-sm class="md-icon-button"> 
 				<md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon> 
 			</md-button>
-			<h1>Ejecutivas</h1>
+			<h1>T&eacute;cnicos</h1>
 		</div>
 	</md-toolbar>
 	<div layout="row" flex>
@@ -28,7 +30,7 @@
 				  <table id="table" class="table table-hover table-mc-light-blue" at-table at-paginated at-list="list" at-config="config" rules="none">
 				      <thead id="tblTitle">
 				        <tr>
-				          <th colspan="2">Ejecutivas</th>
+				          <th colspan="2">Tecnicos</th>
 				          <th>
 				          	<form class="form-inline">
 						        <div class="form-group">
@@ -48,9 +50,9 @@
 				      	</tr>
 				      </thead>
 				      <tbody>
-				        <tr ng-repeat="ejecutiva in list|filter:search| orderBy:'-nombre'">
-				          <td colspan="2" data-title="Nombre">{{ejecutiva.nombre}}</td>
-				          <td colspan="2" data-title="Apellido">{{ejecutiva.apellido}}</td>
+				        <tr ng-repeat="tecnico in list|filter:search| orderBy:'-nombre'">
+				          <td colspan="2" data-title="Nombre">{{tecnico.nombre}}</td>
+				          <td colspan="2" data-title="Apellido">{{tecnico.apellidos}}</td>
 				        </tr>
 				      </tbody>
 				    </table>
@@ -72,5 +74,5 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
-	src="${pageContext.request.contextPath}/resources/js/angularjs/ejecutiva.js"></script>
+	th:src="@{/resources/js/angularjs/tecnicos.js}"></script>
 </html>
