--- a/src/main/webapp/WEB-INF/templates/trabajoAjustes.html
+++ b/src/main/webapp/WEB-INF/templates/trabajoAjustes.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html ng-app="categoriaClientesApp">
+<html ng-app="trabajoAjustesApp"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Administraci&oacute;n de trabajos</title>
-<meta charset="UTF-8" />
+	<title>Localiza El Salvador</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"></link>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/style.css"></link>
-	<link rel="stylesheet" href="${pageContext.request.contextPath}/resources//css/app/table.css"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/style.css}"></link>
+	<link rel="stylesheet" th:href="@{/resources/css/app/table.css}"></link>
 </head>
-<body layout="column" ng-controller="categoriaClienteCtrl as vm">
+<body layout="column" ng-controller="trabajoAjustesCtrl as vm">
 	<md-toolbar layout="row">
 		<div class="md-toolbar-tools">
 			<md-button ng-click="vm.toggleSidenav('left')" hide-gt-sm class="md-icon-button"> 
 				<md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon> 
 			</md-button>
-			<h1>Categorias clientes</h1>
+			<h1>Tipos de trabajos</h1>
 		</div>
 	</md-toolbar>
 	<div layout="row" flex>
@@ -28,7 +30,7 @@
 				  <table id="table" class="table table-hover table-mc-light-blue" at-table at-paginated at-list="list" at-config="config" rules="none">
 				      <thead id="tblTitle">
 				        <tr>
-				          <th>Categorias de trabajos técnicos</th>
+				          <th>Categorias de trabajos tï¿½cnicos</th>
 				          <th>
 				          	<form class="form-inline">
 						        <div class="form-group">
@@ -45,21 +47,21 @@
 				      </thead>
 				      <thead>
 				      	<tr>
-				      		<th>Categoria cliente</th>
+				      		<th>Tipo de trabajo</th>
 				      		<th>Descripci&oacute;n</th>
 				      		<th></th>
 				      	</tr>
 				      </thead>
 				      <tbody>
-				        <tr ng-repeat="categoria in list|filter:search| orderBy:'-id'">
-				          <td class="hidden">{{categoria.id}}</td>
-				          <td data-title="Categoria cliente">{{categoria.tipo_cliente}}</td>
-				          <td data-title="Descripci&oacute;n">{{categoria.descripcion}}</td>
+				        <tr ng-repeat="work in list|filter:search| orderBy:'-id'">
+				          <td class="hidden">{{work.id}}</td>
+				          <td data-title="Tipo de trabajo">{{work.tipoTrabajo}}</td>
+				          <td data-title="Descripci&oacute;n">{{work.descripcion}}</td>
 				          <td class="right-align">
-				          	<a ng-click="deleteFunction($event, categoria)" href="">
+				          	<a ng-click="deleteFunction($event, work)" href="">
 				          		<i class="material-icons crudEliminar">delete_forever</i>
 				          	</a>
-				          	<a ng-click="updateFunction($event, categoria)" href="">
+				          	<a ng-click="updateFunction($event, work)" href="">
 				          		<i class="material-icons crudModificar" >border_color</i>
 				          	</a>
 				          </td>
@@ -84,5 +86,5 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
-	src="${pageContext.request.contextPath}/resources/js/angularjs/categoriaClientes.js"></script>
+	th:src="@{/resources/js/angularjs/trabajoajustes.js}"></script>
 </html>
