Sesiones e inicio de modulo de administracion de personal

--- a/src/main/webapp/WEB-INF/templates/tmpl.menu.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl.menu.html
@@ -10,7 +10,7 @@
 			      	<a href="" class="md-accent md-button md-ink-ripple" href="#"><i class="material-icons">account_circle</i>Mi cuenta</a>
 			      	<ul class="expandible2">
 			        	<li><a href="index">Mi perfil</a></li>
-			        	<li><a >Cerrar sesion</a></li>
+			        	<li><a href="../logout">Cerrar sesion</a></li>
 			      	</ul>
 			    </div> 
 				<div class="menu-item">
