--- a/src/main/webapp/WEB-INF/templates/instalaciones.html
+++ b/src/main/webapp/WEB-INF/templates/instalaciones.html
@@ -93,6 +93,8 @@ xmlns="http://www.w3.org/1999/xhtml"
 <script 
 	src="https://cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.5.3/angular-locale_es-sv.js"></script>
 <script
+	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.min.js"></script>
+<script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
 	th:src="@{/resources/js/moment.js}"></script>
