--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -9,7 +9,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
 	<link rel="stylesheet" th:href="@{/resources/css/login.css}"></link>
-	</head>
+</head>
 	<body>
 		<div  layout="row" layout-align="center center" ng-cloak="">
 			<form name="loginForm" layout="column" class="md-whiteframe-z1" ng-controller="loginCtrl">
@@ -44,6 +44,7 @@ xmlns="http://www.w3.org/1999/xhtml"
   	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
   	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
  	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+ 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.min.js"></script>
  	<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 	<script type="text/javascript" th:src="@{/resources/js/angularjs/login.js}"></script>
 </html>
