--- a/src/main/webapp/WEB-INF/templates/monitoreo.html
+++ b/src/main/webapp/WEB-INF/templates/monitoreo.html
@@ -72,6 +72,8 @@ xmlns="http://www.w3.org/1999/xhtml"
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 <script
+	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.min.js"></script>
+<script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
 	th:src="@{/resources/js/angularjs/monitoreo.js}"></script>
