--- a/src/main/webapp/WEB-INF/templates/trabajoAjustes.html
+++ b/src/main/webapp/WEB-INF/templates/trabajoAjustes.html
@@ -84,6 +84,8 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 <script
+	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.min.js"></script>
+<script
 	src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script type="text/javascript"
 	th:src="@{/resources/js/angularjs/trabajoajustes.js}"></script>
